apps/production/loki/patch-ingress-push.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-push
  namespace: loki
spec:
  tls:
    - hosts:
        - lia-prod.cloudist.solutions
      secretName: loki-tls-secret
  rules:
    - host: lia-prod.cloudist.solutions
      http:
        paths:
          - path: /loki/api/v1/push
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
