apps/production/loki/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: loki
spec:
  tls:
    - hosts:
        - lia-prod.cloudist.solutions
      secretName: loki-tls-secret
  rules:
    - host: lia-prod.cloudist.solutions
